k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-resizer
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      name: http
  selector:
    app: image-resizer
    component: api
