k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: image-resizer
spec:
  to:
    kind: Service
    name: image-resizer
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
